--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "diskinfo": "^0.0.3",
+    "ffi-napi": "^4.0.3",
     "nexe": "^4.0.0-rc.1",
     "node-gyp-build": "^4.5.0",
     "node-pty": "^0.10.1",
     "pkg": "^5.8.0",
-    "temp": "^0.9.4",
-    "ws": "^8.10.0",
-    "ffi-napi": "^4.0.3",
     "ref-array-napi": "^1.2.2",
     "ref-napi": "^3.0.3",
-    "ref-struct-napi": "^1.1.1"
+    "ref-struct-napi": "^1.1.1",
+    "temp": "^0.9.4",
+    "ws": "^8.10.0"
   }
 }
