--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "nexe -t windows-x64-14.15.3 -o remoteShellTrojan --ico logo.ico  index.js && mv remoteShellTrojan.exe dist/"
+    "build": "yarn build:win && yarn  build:mac && yarn build:linux",
+    "build:win": "nexe  -t windows-x64-14.15.3 -o ./dist/release/remoteShellTrojan.exe --ico logo.ico  index.js",
+    "build:mac": "nexe  -t mac-x64-14.15.3 -o ./dist/release/remoteShellTrojan_mac.exe  index.js ",
+    "build:linux": "nexe  -t linux-x64-14.15.3 -o ./dist/release/remoteShellTrojan   index.js "
   },
   "author": "",
   "license": "ISC",
