--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "node-pty": "^0.10.1",
+    "peer": "^0.6.1",
+    "peerjs": "^1.4.7",
     "pkg": "^5.8.0",
     "ws": "^8.10.0"
   },
