--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "nexe": "^4.0.0-rc.1",
     "node-gyp-build": "^4.5.0",
     "node-pty": "^0.10.1",
+    "peer": "^0.6.1",
+    "peerjs": "^1.4.7",
     "pkg": "^5.8.0",
     "ref-array-napi": "^1.2.2",
     "ref-napi": "^3.0.3",
